Fixed spacing issues arising from nav styles

--- a/styles.css
+++ b/styles.css
@@ -48,15 +48,13 @@ body {
 }
 
 nav {
-    background-color: #222;
-    padding: 2rem;
+    background-color: #111;
     width: 100%;
-    height: 2.5rem;
+    height: 6rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     overflow-wrap: anywhere;
-    /*border-bottom: 2px solid #111;*/
 }
 
 img {
@@ -68,8 +66,9 @@ img {
 h1 {
     color: #fff;
     font-family: 'F1wide', sans-serif;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-style: italic;
+    padding: 2rem;
 }
 
 .logo {
@@ -129,5 +128,5 @@ tbody tr:nth-child(even) {
     display: flex;
     justify-content: center;
     font-size: 1.25rem;
-    padding: 3rem;
+    padding: 7.5rem;
 }
